--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 }
 
-plugins{
+plugins {
     id 'com.silverhetch.thea' version '1.2.1'
 }
 
@@ -23,6 +23,16 @@ android {
         versionCode thea.version.versionByFlavor("").versionCode()
         versionName thea.version.versionByFlavor("").versionName()
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        applicationVariants.all { variant ->
+            variant.outputs.all { output ->
+                if (outputFileName.contains("unsigned")) {
+                    outputFileName = "Dashboard128_unsigned_${variant.versionName}.apk"
+                }else {
+                    outputFileName = "Dashboard128_${variant.versionName}.apk"
+                }
+            }
+        }
     }
     buildTypes {
         release {
@@ -40,7 +50,7 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.preference:preference:1.0.0'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
